--- a/kapitel/wichtige_befehle.tex
+++ b/kapitel/wichtige_befehle.tex
@@ -27,6 +27,7 @@ Der Schriftstil kann mit den folgenden Befehlen geändert werden:
 \input{anlagen/tabellen/schriftstil.tex}
 
 Die Schriftstile können mit den Schriftgrößen kombiniert und mit anderen Schriftstilen überlagert werden.
+Es ist zu beachten, dass \textbf{\texttt{\textbackslash lowercase\{\}}} und \textbf{\texttt{\textbackslash uppercase\{\}}} zu Problemen mit Umlauten führen können.
 
 
 \subsubsection{Schriftfarbe}
