--- a/main.tex
+++ b/main.tex
@@ -56,6 +56,7 @@
 \usepackage{amsmath}            % Mathematische Symbole, align-Umgebung (&=)
 \usepackage{amssymb}            % Extra Mathe-Symbole (z. B. Mengen, Relationen)
 \usepackage[makeroom]{cancel}   % Streicht mathematische Ausdrücke durch (mit zusätzlichem Raum)
+\usepackage{bm}                 % Fette Symbole in Matheumgebungen -> \bm{...}
 
 % Literaturverzeichnis
 \usepackage[backend=bibtex, sorting=nyt, urldate=long]{biblatex} % BibTeX-Backend, sortiert nach Name, Jahr, Titel; langes URL-Abrufdatum
@@ -92,6 +93,7 @@
 \setcounter{tocdepth}{3}                            % Inhaltsverzeichnis bis zur Ebene 3 anzeigen
 \setcounter{secnumdepth}{3}                         % Nummerierung bis zur Ebene 3
 \tableofcontents
+\newpage
 \listoftables
 \listoffigures
 \newpage
