--- a/anlagen/tabellen/schriftstil.tex
+++ b/anlagen/tabellen/schriftstil.tex
@@ -2,19 +2,21 @@
     \centering
     \begin{tabular}{lll}
         \toprule
-        \textbf{Befehl}               & \textbf{Wirkung}                 & \textbf{Beispieltext} \\
+        \textbf{Befehl}                  & \textbf{Wirkung}                 & \textbf{Beispieltext} \\
         \midrule
-        \textbackslash textbf\{\}     & Fett                             & \textbf{Text}         \\
-        \textbackslash textit\{\}     & Kursiv                           & \textit{Text}         \\
-        \textbackslash texttt\{\}     & Monospace (Typewriter)           & \texttt{Text}         \\
-        \textbackslash underline\{\}  & Unterstrichen                    & \underline{Text}      \\
-        \textbackslash emph\{\}       & Hervorgehoben (Kursiv o. Fett)   & \emph{Text}           \\
-        \textbackslash textsc\{\}     & Kapitälchen (Small Caps)         & \textsc{Text}         \\
-        \textbackslash textnormal\{\} & Normale Schrift                  & \textnormal{Text}     \\
-        \textbackslash textsf\{\}     & Serifenlose Schrift (Sans-Serif) & \textsf{Text}         \\
-        \textbackslash textsl\{\}     & Schräggestellt (Slanted)         & \textsl{Text}         \\
-        \textbackslash textmd\{\}     & Mittlere Schriftstärke (Medium)  & \textmd{Text}         \\
-        \textbackslash textup\{\}     & Aufrechte Schrift (Upright)      & \textup{Text}         \\
+        \textbackslash textbf\{\}        & Fett                             & \textbf{Text}         \\
+        \textbackslash textit\{\}        & Kursiv                           & \textit{Text}         \\
+        \textbackslash texttt\{\}        & Monospace (Typewriter)           & \texttt{Text}         \\
+        \textbackslash underline\{\}     & Unterstrichen                    & \underline{Text}      \\
+        \textbackslash emph\{\}          & Hervorgehoben (Kursiv o. Fett)   & \emph{Text}           \\
+        \textbackslash MakeUppercase\{\} & Großbuchstaben                   & \MakeUppercase{Text}  \\
+        \textbackslash MakeLowercase\{\} & Kleinbuchstaben                  & \MakeLowercase{Text}  \\
+        \textbackslash textsc\{\}        & Kapitälchen (Small Caps)         & \textsc{Text}         \\
+        \textbackslash textnormal\{\}    & Normale Schrift                  & \textnormal{Text}     \\
+        \textbackslash textsf\{\}        & Serifenlose Schrift (Sans-Serif) & \textsf{Text}         \\
+        \textbackslash textsl\{\}        & Schräggestellt (Slanted)         & \textsl{Text}         \\
+        \textbackslash textmd\{\}        & Mittlere Schriftstärke (Medium)  & \textmd{Text}         \\
+        \textbackslash textup\{\}        & Aufrechte Schrift (Upright)      & \textup{Text}         \\
         \bottomrule
     \end{tabular}
     \caption{Schriftstil-Optionen}
