--- a/anlagen/tabellen/formatierung_matheumgebung.tex
+++ b/anlagen/tabellen/formatierung_matheumgebung.tex
@@ -16,7 +16,7 @@
         Unterstrichen                        & \texttt{\textbackslash underline\{x\}}              & \( \underline{x} \)      \\
         Überstrichen                         & \texttt{\textbackslash overline\{x\}}               & \( \overline{x} \)       \\
         \midrule
-        Text in Mathemodus                   & \texttt{\textbackslash text\{Text\}}                & \( \text{Text} \)        \\
+        Text in Mathe-Umgebungen             & \texttt{\textbackslash text\{Text\}}                & \( \text{Text} \)        \\
         \midrule
         Farbige Schrift (rot)                & \texttt{\textbackslash textcolor\{red\}\{x\}}       & \( \textcolor{red}{x} \) \\
         Farbige Gleichung (blau)             & \texttt{\textbackslash color\{blue\} x = 5}         & \( \color{blue} x = 5 \) \\
