--- a/main.tex
+++ b/main.tex
@@ -35,7 +35,7 @@
 % Tabellen
 \usepackage{hhline}             % Erlaubt doppelte und selektive Linien in Tabellen
 \usepackage{multirow}           % Erlaubt das Zusammenfassen mehrerer Zeilen in Tabellen
-\usepackage[table]{xcolor}      % Ermöglicht das Färben von Tabellenzellen -> \cellcolor{color}
+\usepackage{xcolor}             % Ermöglicht das Färben von Tabellenzellen -> \cellcolor{color} und viele weitere Farboptionen
 \usepackage{booktabs}           % Schönere Tabellenlinien -> \toprule, \midrule, \bottomrule
 
 % Quellcode
