--- a/main.tex
+++ b/main.tex
@@ -37,6 +37,7 @@
 \usepackage{multirow}           % Erlaubt das Zusammenfassen mehrerer Zeilen in Tabellen
 \usepackage{xcolor}             % Ermöglicht das Färben von Tabellenzellen -> \cellcolor{color} und viele weitere Farboptionen
 \usepackage{booktabs}           % Schönere Tabellenlinien -> \toprule, \midrule, \bottomrule
+\usepackage{longtable}          % Tabellen über mehrere Seiten -> \begin{longtable} ... \end{longtable}
 
 % Quellcode
 \usepackage{listings, pmboxdraw} % Quellcode einbinden und optisch ansprechend rahmen
