--- a/kapitel/dokumentenelemente.tex
+++ b/kapitel/dokumentenelemente.tex
@@ -236,7 +236,7 @@ In mathematischen Umgebungen können verschiedene Formatierungen vorgenommen wer
 \subsubsection{Mathematische Symbole}
 In \LaTeX{} gibt es viele mathematische Rechenoperatoren und Symbole, die mit folgenden Befehlen in mathematische Umgebungen eingefügt werden können:
 
-% \input{anlagen/tabellen/mathematische_symbole.tex}
+\input{anlagen/tabellen/mathematische_symbole.tex}
 
 Darüber hinaus gibt es noch viele weitere mathematische Symbole, die in der VSC-Umgebung einfach über die \LaTeX{}-Erweiterung eingefügt werden können.
 
